make post non-draft as we're on a feature branch

--- a/content/blog/20210622-k3d-history.md
+++ b/content/blog/20210622-k3d-history.md
@@ -5,7 +5,7 @@ description: |
   The backstory of how I came to write rancher/k3d, the tool to run k3s, Rancher’s lightweight Kubernetes distribution, in Docker.
 hideSummary: true
 hideDescription: false
-draft: true
+draft: false
 ---
 
 > k3d is a small tool to run k3s, Rancher’s lightweight Kubernetes distribution, in Docker.
