add some goldmark settings, a custom shortcode and some css

--- a/content/blog/20210622-k3d-history.md
+++ b/content/blog/20210622-k3d-history.md
@@ -8,9 +8,10 @@ hideDescription: false
 draft: false
 ---
 
-> k3d is a small tool to run k3s, Rancher’s lightweight Kubernetes distribution, in Docker.
+> [k3d](https://k3d.io) is a small tool to run [k3s](https://k3s.io), a lightweight Kubernetes distribution, in Docker.
+{.bordered}
 
-k3d {{link: <https://k3d.io>}} is my first large open-source project and also my first big project written in Go. In fact, it's my first big (and serious) programming project ever.
+[k3d](https://k3d.io) is my first large open-source project and also my first big project written in Go. In fact, it's my first big (and serious) programming project ever.
 Everytime I'm talking somewhere, participating in a meetup or presenting something even only remotely related to k3d (ok, honestly, that's the only thing most people know me for), people ask me, how I came to write k3d... so I decided to write it down, so I have to talk less in the future 😄
 As most projects, k3d also started with a problem:
 
@@ -62,7 +63,9 @@ Unfortunately, all of them had some drawbacks that made them unsuitable for us, 
 - `k3s` only runs on Linux and can only spin up a single cluster per node
   - this is still valid today, as k3s is basically a Kubernetes distribution and not a tool to run Kubernetes (though it certainly makes it easier)
 
-> N.B. I’m planning to create another blog post, comparing those options to k3d with their **current** feature state, so stay tuned!
+> **Note**
+> I’m planning to create another blog post, comparing those options to k3d with their **current** feature state, so stay tuned!
+{.bordered}
 
 Now while doing my research and giving all those tools a try, I stumbled upon a Twitter post {{link to tweet: <https://twitter.com/zeerorg/status/1110143874436161538>}} by Rishabh Gupta {{twitter profile:<https://twitter.com/zeerorg>}}, who wrote about his new tool called `k3s-in-docker` {{link to original blog: <https://blog.zeerorg.site/post/k3d-kubernetes-dev-env>}} that was a wrapper around the Docker CLI and the official K3s docker image to spin up single-node K3s clusters in Docker.
 The combination of Docker, which was already available on all platforms and K3s as the lightweight and fast Kubernetes distribution, made `k3s-in-docker` another good candidate for the tool we were searching for.
