add some color, pictures and tweets

--- a/content/blog/20210622-k3d-history.md
+++ b/content/blog/20210622-k3d-history.md
@@ -18,10 +18,11 @@ connect:
   reddit: https://www.reddit.com/user/IWillTry42
   github: https://github.com/iwilltry42
 draft: false
+tags: [k3d,rancher,k3s,kubernetes]
+showToC: true
 ---
 
-> [k3d](https://k3d.io) is a small tool to run [k3s](https://k3s.io), a lightweight Kubernetes distribution, in Docker.
-{.bordered}
+{{< figure src="/blog/images/20210622-k3d-history/k3d_logo_black_blue.svg" link="https://k3d.io/" title="k3d is a small tool to run K3s, a lightweight Kubernetes distribution, in Docker." >}}
 
 [k3d](https://k3d.io) is my first large open-source project and also my first big project written in Go. In fact, it's my first big (and serious) programming project ever.
 Everytime I'm talking somewhere, participating in a meetup or presenting something even only remotely related to k3d (ok, honestly, that's the only thing most people know me for), people ask me, how I came to write k3d... so I decided to write it down, so I have to talk less in the future 😄
@@ -96,7 +97,9 @@ But then it happened... impatience hit…
 ... I didn't manage to [wrap my head around Rust](https://twitter.com/IWillTry42/status/1113890462098702336) in around half a day and so I couldn't implement that highly desirable feature.
 I just learned some Go as part of my [bachelor thesis](https://github.com/iwilltry42/bachelor-thesis) and by working on some open-source tools. This and the learning, that almost everything in the Kubernetes ecosystem was (and is) written in Go, led me to thinking that it may be a good idea (and also a good training), to re-write `k3s-in-docker` in Go.
 So I created the new repository `k3d-go` ([iwilltry42/k3d-go](https://github.com/iwilltry42/k3d-go) now redirects to the new repo) and started coding away. Obviously, as I knew at least a little bit about Go and I already had some blueprint of the basic functionality (the commands to call to run k3s containers were the same after all), I pretty fast had an MVP ready that was able to create k3s clusters in docker with the volume mounts feature we wanted to have.
-A few months earlier, I joined Twitter to stay informed about technology (as many brilliant minds are on there... amongst others 😁 ), so now I thought was my time to shine.. and [brag about what I just accomplished](https://twitter.com/IWillTry42/status/1113392443842551808), even though it was absolutely nothing special. I saw a good idea, saw a better fit for it in a different language (mainly because of the surrounding ecosystem) and re-implemented it.
+A few months earlier, I joined Twitter to stay informed about technology (as many brilliant minds are on there... amongst others 😁 ), so now I thought was my time to shine.. and [brag about what I just accomplished](https://twitter.com/IWillTry42/status/1113392443842551808), even though it was absolutely nothing special. I saw a good idea, saw a better fit for it in a different language (for learning and because of the surrounding ecosystem) and re-implemented it.
+
+{{< tweet 1113392443842551808 >}}
 
 ## Catching Fire
 
@@ -105,6 +108,8 @@ When Darren saw Rishabh’s original blog post and my follow-up tweet about the 
 Just shortly after my original Tweet, Darren, Rishabh and me got together in a group chat to talk about both versions of k3d and eventually decided that it would be best for the project to carry on the Go-based version and to move the repository to Rancher Lab's space on GitHub, where more people would see (and expect) it: [**rancher/k3d**](https://github.com/rancher/k3d).
 We all loved the idea of [pushing this project further](https://twitter.com/ibuildthecloud/status/1113853270970126336), so we [moved the repo](https://twitter.com/IWillTry42/status/1116584357974515712) and started to implement more features, add issues and fix bugs right away.
 All of this came absolutely unexpected for me, but soon it showed that it was not only us three being excited about this new project as more and more people gave k3d a try, started creating issues and pull requests and were also just talking and chatting about it (e.g. at the KubeCon EU 2019).
+
+{{< tweet 1116584357974515712 >}}
 
 ## How It's Going
 
@@ -116,6 +121,17 @@ As a side-goal, k3d is also a good candidate for throw-away test clusters in a C
 k3d will continue to evolve and hopefully it further improves the life of developers, operators and everyone else interested in quickly spinning up a lightweight Kubernetes cluster.
 Last but not least: as a community-driven project, [**we're always happy about contributions**](https://github.com/rancher/k3d/blob/main/CONTRIBUTING.md), be it [discussions](https://github.com/rancher/k3d/discussions), [issues](https://github.com/rancher/k3d/issues), [pull-requests](https://github.com/rancher/k3d/pulls), blog posts, tutorials or videos, [related projects](https://k3d.io/#related-projects) or anything else that helps the community and the project!
 **Thanks everyone for contributing to improve k3d!**
+
+### Some Stats on [rancher/k3d](https://github.com/rancher/k3d){{< rawhtml >}}<img alt="Latest Release" src="https://img.shields.io/github/v/release/rancher/k3d?label=Latest%20Release&style=flat-square" style="border-radius: 0px; display: inline;">{{< /rawhtml >}}
+
+{{< rawhtml >}}
+<img alt="Stars" src="https://img.shields.io/github/stars/rancher/k3d?label=Stars&style=flat-square" style="border-radius: 0px; display: inline;">
+<img alt="Contributors" src="https://img.shields.io/github/contributors-anon/rancher/k3d?label=Contributors&style=flat-square" style="border-radius: 0px; display: inline;">
+<img alt="Downloads" src="https://img.shields.io/github/downloads/rancher/k3d/total?label=Downloads&style=flat-square" style="border-radius: 0px; display: inline;">
+<img alt="Closed PRs" src="https://img.shields.io/github/issues-pr-closed-raw/rancher/k3d?label=Closed%20PRs&style=flat-square" style="border-radius: 0px; display: inline;">
+<img alt="Closed Issues" src="https://img.shields.io/github/issues-closed-raw/rancher/k3d?label=Closed%20Issues&style=flat-square" style="border-radius: 0px; display: inline;">
+<img alt="Lines of Code" src="https://img.shields.io/tokei/lines/github/rancher/k3d?label=Lines%20of%20Code&style=flat-square" style="border-radius: 0px; display: inline;">
+{{< /rawhtml >}}
 
 ## A Note About Me
 
