--- a/content/blog/20210622-k3d-history.md
+++ b/content/blog/20210622-k3d-history.md
@@ -8,7 +8,7 @@ hideDescription: false
 disableCommentButtons: false
 comments:
   twitter: https://twitter.com/iwilltry42/status/1234
-  linkedin: abcd
+  linkedin: https://www.linkedin.com/in/thorsten-klein-b39520114/
   github: https://github.com/iwilltry42/thklein.io/discussions/4
 disableConnectButtons: false
 connect:
