add cover which is hidden in list

--- a/content/blog/20210622-k3d-history.md
+++ b/content/blog/20210622-k3d-history.md
@@ -19,6 +19,9 @@ connect:
 draft: false
 tags: [k3d,rancher,k3s,kubernetes]
 showToC: true
+cover:
+  image: /blog/images/20210622-k3d-history/og-img.png
+  hidden: true
 ---
 
 {{< figure src="/blog/images/20210622-k3d-history/k3d_logo_black_blue.svg" link="https://k3d.io/" title="k3d is a small tool to run K3s, a lightweight Kubernetes distribution, in Docker." >}}
