blog/k3d-history: fix link to k3d.io

--- a/content/blog/20210622-k3d-history.md
+++ b/content/blog/20210622-k3d-history.md
@@ -121,7 +121,7 @@ As of now (June 2021), k3d is approaching the major release [v5.0.0](https://git
 The main goal of k3d is to provide a fast and easy way of creating and managing decomposable Kubernetes clusters for local development.
 As a side-goal, k3d is also a good candidate for throw-away test clusters in a CI system (and there are already real life examples for various CI systems out there).
 k3d will continue to evolve and hopefully it further improves the life of developers, operators and everyone else interested in quickly spinning up a lightweight Kubernetes cluster.
-Last but not least: as a community-driven project, [**we're always happy about contributions**](https://github.com/rancher/k3d/blob/main/CONTRIBUTING.md), be it [discussions](https://github.com/rancher/k3d/discussions), [issues](https://github.com/rancher/k3d/issues), [pull-requests](https://github.com/rancher/k3d/pulls), blog posts, tutorials or videos, [related projects](https://k3d.io/#related-projects) or anything else that helps the community and the project!
+Last but not least: as a community-driven project, [**we're always happy about contributions**](https://github.com/rancher/k3d/blob/main/CONTRIBUTING.md), be it [discussions](https://github.com/rancher/k3d/discussions), [issues](https://github.com/rancher/k3d/issues), [pull-requests](https://github.com/rancher/k3d/pulls), blog posts, tutorials or videos, [related projects](https://k3d.io/stable/#related-projects) or anything else that helps the community and the project!
 **Thanks everyone for contributing to improve k3d!**
 
 ### Some Stats on [rancher/k3d](https://github.com/rancher/k3d){{< rawhtml >}}<img alt="Latest Release" src="https://img.shields.io/github/v/release/rancher/k3d?label=Latest%20Release&style=flat-square" style="border-radius: 0px; display: inline;">{{< /rawhtml >}}
