update links to new github org k3d-io

--- a/content/blog/20210622-k3d-history.md
+++ b/content/blog/20210622-k3d-history.md
@@ -2,7 +2,7 @@
 title: "A brief History of k3d"
 date: 2021-06-24T12:00:30+02:00
 description: |
-  The backstory of how I came to write rancher/k3d, the tool to run k3s, Rancher’s lightweight Kubernetes distribution, in Docker.
+  The backstory of how I came to write k3d-io/k3d, the tool to run k3s, Rancher’s lightweight Kubernetes distribution, in Docker.
 hideSummary: true
 hideDescription: false
 disableCommentButtons: false
@@ -25,6 +25,8 @@ cover:
 ---
 
 {{< figure src="/blog/images/20210622-k3d-history/k3d_logo_black_blue.svg" link="https://k3d.io/" title="k3d is a small tool to run K3s, a lightweight Kubernetes distribution, in Docker." >}}
+
+UPDATE 17.02.2022: k3d moved to a **new GitHub organization @ [k3d-io/k3d](https://github.com/k3d-io/k3d)**
 
 [k3d](https://k3d.io) is my first large open-source project and also my first big project written in Go. In fact, it's my first big (and serious) programming project ever.
 Everytime I'm talking somewhere, participating in a meetup or presenting something even only remotely related to k3d (ok, honestly, that's the only thing most people know me for), people ask me, how I came to write k3d... so I decided to write it down, so I have to talk less in the future 😄
@@ -106,8 +108,8 @@ A few months earlier, I joined Twitter to stay informed about technology (as man
 ## Catching Fire
 
 To my luck, [Darren Shepherd](https://twitter.com/ibuildthecloud/), co-founder of Rancher Labs (now Chief Architect at SUSE) chose Twitter to be a good place to spend some time on that day.
-When Darren saw Rishabh’s original blog post and my follow-up tweet about the rewrite in Go, he was super excited about the project building on top of his K3s and so he even created the [very first PR](https://github.com/rancher/k3d/pull/1).
-Just shortly after my original Tweet, Darren, Rishabh and me got together in a group chat to talk about both versions of k3d and eventually decided that it would be best for the project to carry on the Go-based version and to move the repository to Rancher Lab's space on GitHub, where more people would see (and expect) it: [**rancher/k3d**](https://github.com/rancher/k3d).
+When Darren saw Rishabh’s original blog post and my follow-up tweet about the rewrite in Go, he was super excited about the project building on top of his K3s and so he even created the [very first PR](https://github.com/k3d-io/k3d/pull/1).
+Just shortly after my original Tweet, Darren, Rishabh and me got together in a group chat to talk about both versions of k3d and eventually decided that it would be best for the project to carry on the Go-based version and to move the repository to Rancher Lab's space on GitHub, where more people would see (and expect) it: [**rancher/k3d**](https://github.com/k3d-io/k3d).
 We all loved the idea of [pushing this project further](https://twitter.com/ibuildthecloud/status/1113853270970126336), so we [moved the repo](https://twitter.com/IWillTry42/status/1116584357974515712) and started to implement more features, add issues and fix bugs right away.
 All of this came absolutely unexpected for me, but soon it showed that it was not only us three being excited about this new project as more and more people gave k3d a try, started creating issues and pull requests and were also just talking and chatting about it (e.g. at the KubeCon EU 2019).
 
@@ -115,24 +117,24 @@ All of this came absolutely unexpected for me, but soon it showed that it was no
 
 ## How It's Going
 
-Over the next few months (and even years by now), k3d was completely [re-written from scratch](https://github.com/rancher/k3d/pull/212), largely refactored more than once and gained lots of new features and improvements together with a growing user base and awesome community.
+Over the next few months (and even years by now), k3d was completely [re-written from scratch](https://github.com/k3d-io/k3d/pull/212), largely refactored more than once and gained lots of new features and improvements together with a growing user base and awesome community.
 Still, k3d is a community project, that is really well supported by Rancher Labs (now known as SUSE Rancher), who e.g. provide the Drone CI infrastructure for testing and releasing k3d.
-As of now (June 2021), k3d is approaching the major release [v5.0.0](https://github.com/rancher/k3d/milestone/27) that will finally solve some issues that have already been around since the beginning in 2019 (like editing the cluster after it was created, e.g. to add new port mappings).
+As of now (June 2021), k3d is approaching the major release [v5.0.0](https://github.com/k3d-io/k3d/milestone/27) that will finally solve some issues that have already been around since the beginning in 2019 (like editing the cluster after it was created, e.g. to add new port mappings).
 The main goal of k3d is to provide a fast and easy way of creating and managing decomposable Kubernetes clusters for local development.
 As a side-goal, k3d is also a good candidate for throw-away test clusters in a CI system (and there are already real life examples for various CI systems out there).
 k3d will continue to evolve and hopefully it further improves the life of developers, operators and everyone else interested in quickly spinning up a lightweight Kubernetes cluster.
-Last but not least: as a community-driven project, [**we're always happy about contributions**](https://github.com/rancher/k3d/blob/main/CONTRIBUTING.md), be it [discussions](https://github.com/rancher/k3d/discussions), [issues](https://github.com/rancher/k3d/issues), [pull-requests](https://github.com/rancher/k3d/pulls), blog posts, tutorials or videos, [related projects](https://k3d.io/stable/#related-projects) or anything else that helps the community and the project!
+Last but not least: as a community-driven project, [**we're always happy about contributions**](https://github.com/k3d-io/k3d/blob/main/CONTRIBUTING.md), be it [discussions](https://github.com/k3d-io/k3d/discussions), [issues](https://github.com/k3d-io/k3d/issues), [pull-requests](https://github.com/k3d-io/k3d/pulls), blog posts, tutorials or videos, [related projects](https://k3d.io/stable/#related-projects) or anything else that helps the community and the project!
 **Thanks everyone for contributing to improve k3d!**
 
-### Some Stats on [rancher/k3d](https://github.com/rancher/k3d){{< rawhtml >}}<img alt="Latest Release" src="https://img.shields.io/github/v/release/rancher/k3d?label=Latest%20Release&style=flat-square" style="border-radius: 0px; display: inline;">{{< /rawhtml >}}
+### Some Stats on [k3d-io/k3d](https://github.com/k3d-io/k3d){{< rawhtml >}}<img alt="Latest Release" src="https://img.shields.io/github/v/release/k3d-io/k3d?label=Latest%20Release&style=flat-square" style="border-radius: 0px; display: inline;">{{< /rawhtml >}}
 
 {{< rawhtml >}}
-<img alt="Stars" src="https://img.shields.io/github/stars/rancher/k3d?label=Stars&style=flat-square" style="border-radius: 0px; display: inline;">
-<img alt="Contributors" src="https://img.shields.io/github/contributors-anon/rancher/k3d?label=Contributors&style=flat-square" style="border-radius: 0px; display: inline;">
-<img alt="Downloads" src="https://img.shields.io/github/downloads/rancher/k3d/total?label=Downloads&style=flat-square" style="border-radius: 0px; display: inline;">
-<img alt="Closed PRs" src="https://img.shields.io/github/issues-pr-closed-raw/rancher/k3d?label=Closed%20PRs&style=flat-square" style="border-radius: 0px; display: inline;">
-<img alt="Closed Issues" src="https://img.shields.io/github/issues-closed-raw/rancher/k3d?label=Closed%20Issues&style=flat-square" style="border-radius: 0px; display: inline;">
-<img alt="Lines of Code" src="https://img.shields.io/tokei/lines/github/rancher/k3d?label=Lines%20of%20Code&style=flat-square" style="border-radius: 0px; display: inline;">
+<img alt="Stars" src="https://img.shields.io/github/stars/k3d-io/k3d?label=Stars&style=flat-square" style="border-radius: 0px; display: inline;">
+<img alt="Contributors" src="https://img.shields.io/github/contributors-anon/k3d-io/k3d?label=Contributors&style=flat-square" style="border-radius: 0px; display: inline;">
+<img alt="Downloads" src="https://img.shields.io/github/downloads/k3d-io/k3d/total?label=Downloads&style=flat-square" style="border-radius: 0px; display: inline;">
+<img alt="Closed PRs" src="https://img.shields.io/github/issues-pr-closed-raw/k3d-io/k3d?label=Closed%20PRs&style=flat-square" style="border-radius: 0px; display: inline;">
+<img alt="Closed Issues" src="https://img.shields.io/github/issues-closed-raw/k3d-io/k3d?label=Closed%20Issues&style=flat-square" style="border-radius: 0px; display: inline;">
+<img alt="Lines of Code" src="https://img.shields.io/tokei/lines/github/k3d-io/k3d?label=Lines%20of%20Code&style=flat-square" style="border-radius: 0px; display: inline;">
 {{< /rawhtml >}}
 
 ## A Note About Me
