fix: links checker

--- a/content/blog/20210622-k3d-history.md
+++ b/content/blog/20210622-k3d-history.md
@@ -24,7 +24,7 @@ cover:
   hidden: true
 ---
 
-{{< figure src="/blog/images/20210622-k3d-history/k3d_logo_black_blue.svg" link="https://k3d.io/" title="k3d is a small tool to run K3s, a lightweight Kubernetes distribution, in Docker." >}}
+{{< figure src="/blog/images/20210622-k3d-history/k3d_logo_black_blue.svg" link="<https://k3d.io/>" title="k3d is a small tool to run K3s, a lightweight Kubernetes distribution, in Docker." >}}
 
 UPDATE 17.02.2022: k3d moved to a **new GitHub organization @ [k3d-io/k3d](https://github.com/k3d-io/k3d)**
 
@@ -90,7 +90,7 @@ Unfortunately, all of them had some drawbacks that made them unsuitable for us, 
 > I’m planning to create another blog post, comparing those options to k3d with their **current** feature state, so stay tuned!
 {.bordered}
 
-Now while doing my research and giving all those tools a try, I stumbled upon a [Twitter post](https://twitter.com/zeerorg/status/1110143874436161538) by [Rishabh Gupta](https://twitter.com/zeerorg), who [wrote about his new tool called `k3s-in-docker`](https://blog.zeerorg.site/post/k3d-kubernetes-dev-env>) that was a wrapper around the Docker CLI and the official K3s docker image to spin up single-node K3s clusters in Docker.
+Now while doing my research and giving all those tools a try, I stumbled upon a [Twitter post](https://twitter.com/zeerorg/status/1110143874436161538) by [Rishabh Gupta](https://twitter.com/zeerorg), who [wrote about his new tool called `k3s-in-docker`](https://blog.zeerorg.site/post/k3d-kubernetes-dev-env) that was a wrapper around the Docker CLI and the official K3s docker image to spin up single-node K3s clusters in Docker.
 The combination of Docker, which was already available on all platforms and K3s as the lightweight and fast Kubernetes distribution, made `k3s-in-docker` ([written in Rust](https://github.com/zeerorg/k3s-in-docker)) another good candidate for the tool we were searching for.
 While I gave it a try, I liked it a lot (might've been a bit biased though as I already liked K3s and many of the other projects coming from Rancher Labs), but it was still missing some essential features that we really wanted to have, e.g. [volume mounts](https://twitter.com/IWillTry42/status/1110441980654424064).
 So I had a chat with Rishabh about my issue and also started to try and implement this feature myself.
